--- a/NewsTerm-Universal/MainPage.xaml
+++ b/NewsTerm-Universal/MainPage.xaml
@@ -84,7 +84,22 @@
             <AppBarButton x:Name="settingsButton" Label="Settings" Icon="Setting" />
         </CommandBar>
 
-        <ListView
+        <local:RefreshableListView
+            x:Name="MasterListView"
+            Grid.Row="0"
+            ItemContainerTransitions="{x:Null}"
+            ItemTemplate="{StaticResource ItemListTemplate}"
+            IsItemClickEnabled="True"
+            ItemClick="MasterListView_ItemClick"
+            RefreshRequested="MasterListView_RefreshRequested">
+            <local:RefreshableListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                </Style>
+            </local:RefreshableListView.ItemContainerStyle>
+        </local:RefreshableListView>
+        
+        <!--<ListView
             x:Name="MasterListView"
             Grid.Row="0"
             ItemContainerTransitions="{x:Null}"
@@ -96,7 +111,7 @@
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                 </Style>
             </ListView.ItemContainerStyle>
-        </ListView>
+        </ListView>-->
 
         <ContentPresenter
             x:Name="DetailContentPresenter"
