Seperate RemoveRead and Refresh. Real settings page.

--- a/NewsTerm-Universal/MainPage.xaml
+++ b/NewsTerm-Universal/MainPage.xaml
@@ -81,7 +81,7 @@
 
         <CommandBar x:Name="commandBar" x:FieldModifier="Protected" Grid.Row="1">
             <AppBarButton x:Name="refreshButton" Label="Refresh" Icon="Refresh" Click="RefreshButton_Click"/>
-            <AppBarButton x:Name="settingsButton" Label="Settings" Icon="Setting" />
+            <AppBarButton x:Name="settingsButton" Label="Settings" Icon="Setting" Click="settingsButton_Click"/>
         </CommandBar>
 
         <!--<local:RefreshableListView
@@ -115,6 +115,7 @@
 
         <ProgressRing Grid.Row="0" Grid.Column="0" Name="LoadingProcessProgressRing" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TextBlock Grid.Row="0" Grid.Column="0" Name="EmptyListText" Text="No news is good news" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Name="ErrorListText" Text="Error connecting to server" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed"/>
 
         <ContentPresenter
             x:Name="DetailContentPresenter"
