--- a/NewsTerm-Universal/SettingsPage.xaml
+++ b/NewsTerm-Universal/SettingsPage.xaml
@@ -6,13 +6,21 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.BottomAppBar>
+        <CommandBar>
+            <CommandBar.Content>
+                <Grid/>
+            </CommandBar.Content>
+            <AppBarButton x:Name="SaveButton" Icon="Accept" Label="Save" Click="SaveButton_Click"/>
+            <AppBarButton x:Name="CancelButton" Icon="Cancel" Label="Cancel" Click="CancelButton_Click"/>
+        </CommandBar>
+    </Page.BottomAppBar>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Pivot Title="Settomgs">
-            <PivotItem Header="Server">
-                <Grid/>
-            </PivotItem>
-        </Pivot>
+        <TextBox x:Name="urlTextBox" HorizontalAlignment="Left" Margin="10,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="340" PlaceholderText="https://yourdomain.tld"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Settings" VerticalAlignment="Top" Style="{ThemeResource HeaderTextBlockStyle}"/>
+        <TextBox x:Name="usernameTextBox" HorizontalAlignment="Left" Margin="10,115,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="340" PlaceholderText="Username"/>
+        <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Margin="10,152,0,0" VerticalAlignment="Top" Width="340" PlaceholderText="Password"/>
 
     </Grid>
 </Page>
