--- a/NewsTerm-Universal/SettingsPage.xaml
+++ b/NewsTerm-Universal/SettingsPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     NavigationCacheMode="Enabled"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+   
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition />
@@ -30,5 +30,6 @@
         <TextBox x:Name="urlTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="340" PlaceholderText="https://yourdomain.tld" Margin="10,10,0,10"/>
         <TextBox x:Name="usernameTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="340" PlaceholderText="Username" Margin="10,0,0,10"/>
         <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="340" PlaceholderText="Password" Margin="10,0,0,10"/>
+        <CheckBox x:Name="darkThemeCheckBox" Content="Dark Theme" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10,0,0,10" Checked="darkThemeCheckBox_Checked" Unchecked="darkThemeCheckBox_Checked"/>
     </StackPanel>
 </Page>
