--- a/NewsTerm-Universal/MainPage.xaml
+++ b/NewsTerm-Universal/MainPage.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d"
     NavigationCacheMode="Enabled"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    
+
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition />
@@ -18,6 +18,7 @@
     </Page.Transitions>
 
     <Page.Resources>
+        <local:FontWeightBindingConverter x:Key="FontWeightBindingConverter" />
         <DataTemplate x:Key="ItemListTemplate" x:DataType="data:ItemModel">
             <Grid Margin="0,11,0,13">
                 <Grid.RowDefinitions>
@@ -30,7 +31,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Image Source="{x:Bind favicon}" Margin="5,5,5,5" Width="16" Height="16" />
-                <TextBlock Grid.Column="1" Text="{x:Bind title}" MaxLines="1" Style="{ThemeResource BaseTextBlockStyle}" />
+                <TextBlock Grid.Column="1" Text="{x:Bind title}" MaxLines="1" Style="{ThemeResource BaseTextBlockStyle}" FontWeight="{Binding Path=unread, Converter={StaticResource FontWeightBindingConverter}}"/>
                 <TextBlock Grid.Column="2" Text="{x:Bind author}" Style="{ThemeResource ListCaptionAltTextblockStyle}" />
             </Grid>
         </DataTemplate>
